--- a/first-cards/style.css
+++ b/first-cards/style.css
@@ -43,11 +43,12 @@ body {
   transition: opacity 0.3s ease-in-out;
   transform: scale(1.01);
   filter: sepia(100%) saturate(200%) brightness(50%) hue-rotate(180deg);
+  animation: gif 0.5s infinite steps(1);
 }
 
 .card:hover > img {
-  /* opacity: 1; */
   filter: sepia(0%);
+  animation-play-state: paused;
 }
 
 .card-group:hover > .card:nth-child(1) {
