--- a/first-cards/style.css
+++ b/first-cards/style.css
@@ -12,10 +12,10 @@ body {
 }
 
 .card {
-  width: 30vmin;
+  width: 31vmin;
   aspect-ratio: 5 / 7;
-  background-color: rgba(255, 255, 255, 1);
   position: absolute;
+  background-color: #0f0d1e47;
   border-radius: 1vmin;
   filter: drop-shadow(-10px 6px 5px #0000004f);
   transition: transform 800ms cubic-bezier(0.05, 0.43, 0.25, 0.95);
@@ -23,6 +23,7 @@ body {
   top: 50%;
   left: 50%;
   transform: translate(-50%, 10%);
+  border: 2px solid rgb(59, 69, 127, 0.5);
 }
 
 .static,
@@ -39,7 +40,7 @@ body {
   width: 100%;
   object-fit: cover;
   border-radius: inherit;
-  opacity: 0;
+  opacity: 1;
   transition: opacity 0.3s ease-in-out;
   transform: scale(1.01);
   filter: sepia(100%) saturate(200%) brightness(50%) hue-rotate(180deg);
